[gd_scene load_steps=27 format=3 uid="uid://b075d85nmca7s"]

[ext_resource type="Script" path="res://scripts/user_interface/user_interface.gd" id="1_fei3a"]
[ext_resource type="Script" path="res://scripts/user_interface/fps_counter.gd" id="2_b26wl"]
[ext_resource type="Texture2D" uid="uid://dishehhur7io2" path="res://assets/white_dot.png" id="3_jfxbm"]
[ext_resource type="Script" path="res://scripts/user_interface/heads_up_display.gd" id="4_x3dcn"]
[ext_resource type="PackedScene" uid="uid://dt6i863shdkev" path="res://scenes/user_interface/NoticeTriangle.tscn" id="5_q0i7v"]
[ext_resource type="PackedScene" uid="uid://clbe1nrax10m8" path="res://scenes/user_interface/WellbeingWidget.tscn" id="6_3d4tg"]
[ext_resource type="PackedScene" uid="uid://dxqwv56gkjhbf" path="res://scenes/user_interface/OffCameraNoticeTriangle.tscn" id="7_xgn82"]
[ext_resource type="Script" path="res://scripts/user_interface/player_health_bar.gd" id="8_opu4r"]
[ext_resource type="Script" path="res://scripts/user_interface/player_instability_bar.gd" id="9_oh42p"]
[ext_resource type="Gradient" uid="uid://ch0fcpiyhmlkr" path="res://resources/instability_colour_gradient.tres" id="10_be1b2"]
[ext_resource type="Script" path="res://scripts/user_interface/player_health_charges.gd" id="11_dm5po"]
[ext_resource type="Texture2D" uid="uid://b80p5j73bgwl1" path="res://assets/square.png" id="12_w4pfp"]
[ext_resource type="Texture2D" uid="uid://byhp3ghf2qiij" path="res://assets/flask.svg" id="13_qxi5u"]
[ext_resource type="Script" path="res://scripts/user_interface/interaction_hints.gd" id="14_lj2ih"]
[ext_resource type="Texture2D" uid="uid://06ykk08io3p2" path="res://assets/letter-uppercase-square-e.svg" id="15_dh0uu"]
[ext_resource type="Script" path="res://scripts/user_interface/checkpoint_interface.gd" id="16_kf5c6"]
[ext_resource type="Texture2D" uid="uid://c42vaoia0lped" path="res://assets/checkpoint_menu_background.png" id="17_up4la"]
[ext_resource type="Script" path="res://scripts/user_interface/death_screen.gd" id="18_xmmct"]
[ext_resource type="Texture2D" uid="uid://cj06tl3fnh5m4" path="res://assets/death_strip.png" id="19_l3dc3"]

[sub_resource type="Animation" id="Animation_rfd6a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Glare:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedVector2Array(-96, -10, 96, -10, 136, 0, 96, 10, -96, 10, -136, 0)]
}

[sub_resource type="Animation" id="Animation_qc4ds"]
resource_name = "max"
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.04, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Glare:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.08),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedVector2Array(-96, -10, 96, -10, 136, 0, 96, 10, -96, 10, -136, 0), PackedVector2Array(-96, -10, 96, -10, 320, 0, 96, 10, -96, 10, -320, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5aluf"]
_data = {
"RESET": SubResource("Animation_rfd6a"),
"max_instability": SubResource("Animation_qc4ds")
}

[sub_resource type="LabelSettings" id="LabelSettings_vd688"]
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_u65vg"]
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_dqlnf"]
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_y5bbt"]
font_size = 48
font_color = Color(0.658824, 0, 0, 1)

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_fei3a")

[node name="FPSCounter" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.04
anchor_top = 0.04
anchor_right = 0.04
anchor_bottom = 0.04
offset_right = 92.0
offset_bottom = 26.0
text = "FPS: 0
"
script = ExtResource("2_b26wl")

[node name="DebugWhiteDot" type="Sprite2D" parent="."]
visible = false
position = Vector2(560, 396)
scale = Vector2(0.02, 0.02)
texture = ExtResource("3_jfxbm")

[node name="HUD" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("4_x3dcn")

[node name="LockOn" type="TextureRect" parent="HUD"]
layout_mode = 1
offset_right = 10.0
offset_bottom = 10.0
texture = ExtResource("3_jfxbm")
expand_mode = 1

[node name="NoticeTriangles" type="Node2D" parent="HUD"]

[node name="NoticeTriangle" parent="HUD/NoticeTriangles" instance=ExtResource("5_q0i7v")]
visible = false
position = Vector2(31, 28)

[node name="WellbeingWidgets" type="Node2D" parent="HUD"]

[node name="WellbeingWidget" parent="HUD/WellbeingWidgets" instance=ExtResource("6_3d4tg")]
visible = false
position = Vector2(105, 32)

[node name="OffCameraNoticeTriangles" type="Control" parent="HUD"]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.55
anchor_right = 0.5
anchor_bottom = 0.55
grow_horizontal = 2
grow_vertical = 2

[node name="OffCameraNoticeTriangle" parent="HUD/OffCameraNoticeTriangles" instance=ExtResource("7_xgn82")]
visible = false

[node name="PlayerHealthBar" type="Control" parent="HUD"]
layout_mode = 1
anchor_left = 0.05
anchor_top = 0.92
anchor_right = 0.05
anchor_bottom = 0.92
grow_vertical = 0
script = ExtResource("8_opu4r")

[node name="Background" type="Polygon2D" parent="HUD/PlayerHealthBar"]
self_modulate = Color(0.196078, 0.196078, 0.196078, 1)
position = Vector2(0, -8)
polygon = PackedVector2Array(0, -8, 0, 8, 100, 8, 100, -8)

[node name="DelayBar" type="Polygon2D" parent="HUD/PlayerHealthBar"]
self_modulate = Color(0.556863, 0.556863, 0.556863, 1)
position = Vector2(4, -8)
polygon = PackedVector2Array(0, -4, 0, 4, 92, 4, 92, -4)

[node name="Health" type="Polygon2D" parent="HUD/PlayerHealthBar"]
self_modulate = Color(0.662745, 0.105882, 0.105882, 1)
position = Vector2(4, -8)
polygon = PackedVector2Array(0, -4, 0, 4, 92, 4, 92, -4)

[node name="PlayerInstabilityBar" type="Control" parent="HUD"]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.85
anchor_right = 0.5
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("9_oh42p")
color_gradient = ExtResource("10_be1b2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/PlayerInstabilityBar"]
libraries = {
"": SubResource("AnimationLibrary_5aluf")
}

[node name="Glare" type="Polygon2D" parent="HUD/PlayerInstabilityBar"]
self_modulate = Color(0.954013, 0.22264, 1.34766e-06, 1)
position = Vector2(0, -4)
scale = Vector2(1.02, 1)
antialiased = true
polygon = PackedVector2Array(-96, -10, 96, -10, 136, 0, 96, 10, -96, 10, -136, 0)

[node name="Background" type="Polygon2D" parent="HUD/PlayerInstabilityBar"]
self_modulate = Color(0.196078, 0.196078, 0.196078, 1)
position = Vector2(0, -4)
antialiased = true
polygon = PackedVector2Array(-96, -8, 96, -8, 128, 0, 96, 8, -96, 8, -128, 0)

[node name="Instability" type="Polygon2D" parent="HUD/PlayerInstabilityBar"]
self_modulate = Color(0.854902, 0.721569, 0, 1)
position = Vector2(0, -4)
antialiased = true
polygon = PackedVector2Array(-114, 0, -96, -4, 96, -4, 114, 0, 96, 4, -96, 4)

[node name="Middle" type="Polygon2D" parent="HUD/PlayerInstabilityBar"]
position = Vector2(0, -4)
antialiased = true
polygon = PackedVector2Array(-2, -5, 0, -6, 2, -5, 2, 5, 0, 6, -2, 5)

[node name="PlayerHealthCharges" type="Control" parent="HUD"]
layout_mode = 1
anchor_left = 0.95
anchor_top = 0.92
anchor_right = 0.95
anchor_bottom = 0.92
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("11_dm5po")
flask_color = Color(0.0823529, 0.596078, 0.815686, 1)
no_charges_color = Color(0.392157, 0.501961, 0.666667, 1)

[node name="Background" type="Sprite2D" parent="HUD/PlayerHealthCharges"]
self_modulate = Color(0.196078, 0.196078, 0.196078, 1)
position = Vector2(-40, -40)
scale = Vector2(0.8, 0.8)
texture = ExtResource("12_w4pfp")

[node name="Flask" type="Sprite2D" parent="HUD/PlayerHealthCharges"]
self_modulate = Color(0.0823529, 0.596078, 0.815686, 1)
position = Vector2(-40, -40)
scale = Vector2(0.9, 0.9)
texture = ExtResource("13_qxi5u")

[node name="Label" type="Label" parent="HUD/PlayerHealthCharges"]
layout_mode = 0
offset_left = -32.0
offset_top = -80.0
offset_bottom = -47.0
text = "8
"
label_settings = SubResource("LabelSettings_vd688")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InteractionHints" type="Control" parent="HUD"]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.94
anchor_right = 0.5
anchor_bottom = 0.94
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("14_lj2ih")

[node name="CheckpointHint" type="Control" parent="HUD/InteractionHints"]
anchors_preset = 0
offset_left = -70.0
offset_right = -70.0
pivot_offset = Vector2(70, 0)

[node name="Sprite2D" type="Sprite2D" parent="HUD/InteractionHints/CheckpointHint"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("15_dh0uu")

[node name="Label" type="Label" parent="HUD/InteractionHints/CheckpointHint"]
layout_mode = 0
offset_left = 14.275
offset_top = -12.855
offset_right = 386.275
offset_bottom = 13.145
text = ":  Recover at checkpoint"
label_settings = SubResource("LabelSettings_u65vg")
vertical_alignment = 1

[node name="CheckpointInterface" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("16_kf5c6")

[node name="Fade" type="TextureRect" parent="CheckpointInterface"]
self_modulate = Color(0, 0, 0, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_w4pfp")

[node name="Menu" type="Control" parent="CheckpointInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="CheckpointInterface/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("17_up4la")
expand_mode = 3

[node name="Buttons" type="VBoxContainer" parent="CheckpointInterface/Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.05
anchor_bottom = 0.1
offset_right = 150.0
offset_bottom = 67.0
theme_override_constants/separation = 5

[node name="Recover" type="Button" parent="CheckpointInterface/Menu/Buttons"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Return")
focus_next = NodePath("../Return")
focus_previous = NodePath("../Return")
text = "Recover"
alignment = 0

[node name="Return" type="Button" parent="CheckpointInterface/Menu/Buttons"]
layout_mode = 2
focus_neighbor_top = NodePath("../Recover")
focus_next = NodePath("../Recover")
focus_previous = NodePath("../Recover")
text = "Return
"
alignment = 0

[node name="Attributes" type="TextureRect" parent="CheckpointInterface/Menu"]
self_modulate = Color(0, 0, 0, 0.196078)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.45
anchor_top = 0.15
anchor_right = 0.85
anchor_bottom = 0.5
texture = ExtResource("12_w4pfp")

[node name="GridContainer" type="GridContainer" parent="CheckpointInterface/Menu/Attributes"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.07
anchor_top = 0.1
anchor_right = 0.93
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 30

[node name="Health" type="VBoxContainer" parent="CheckpointInterface/Menu/Attributes/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HealthLabel" type="Label" parent="CheckpointInterface/Menu/Attributes/GridContainer/Health"]
layout_mode = 2
text = "Health
"

[node name="PlayerHealthBar" type="Control" parent="CheckpointInterface/Menu/Attributes/GridContainer/Health"]
layout_mode = 2
script = ExtResource("8_opu4r")

[node name="Background" type="Polygon2D" parent="CheckpointInterface/Menu/Attributes/GridContainer/Health/PlayerHealthBar"]
self_modulate = Color(0.196078, 0.196078, 0.196078, 1)
polygon = PackedVector2Array(0, -8, 0, 8, 100, 8, 100, -8)

[node name="DelayBar" type="Polygon2D" parent="CheckpointInterface/Menu/Attributes/GridContainer/Health/PlayerHealthBar"]
self_modulate = Color(0.556863, 0.556863, 0.556863, 1)
position = Vector2(4, 0)
polygon = PackedVector2Array(0, -4, 0, 4, 92, 4, 92, -4)

[node name="Health" type="Polygon2D" parent="CheckpointInterface/Menu/Attributes/GridContainer/Health/PlayerHealthBar"]
self_modulate = Color(0.662745, 0.105882, 0.105882, 1)
position = Vector2(4, 0)
polygon = PackedVector2Array(0, -4, 0, 4, 92, 4, 92, -4)

[node name="PlayerHealthCharges" type="Control" parent="CheckpointInterface/Menu/Attributes/GridContainer"]
layout_mode = 2
script = ExtResource("11_dm5po")
flask_color = Color(0.0823529, 0.596078, 0.815686, 1)
no_charges_color = Color(0.392157, 0.501961, 0.666667, 1)

[node name="Background" type="Sprite2D" parent="CheckpointInterface/Menu/Attributes/GridContainer/PlayerHealthCharges"]
self_modulate = Color(0.196078, 0.196078, 0.196078, 1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_w4pfp")
centered = false

[node name="Flask" type="Sprite2D" parent="CheckpointInterface/Menu/Attributes/GridContainer/PlayerHealthCharges"]
self_modulate = Color(0.0823529, 0.596078, 0.815686, 1)
scale = Vector2(0.6, 0.6)
texture = ExtResource("13_qxi5u")
centered = false
offset = Vector2(10, 10)

[node name="Label" type="Label" parent="CheckpointInterface/Menu/Attributes/GridContainer/PlayerHealthCharges"]
layout_mode = 0
offset_left = 23.0
offset_top = -6.0
offset_right = 55.0
offset_bottom = 27.0
text = "8
"
label_settings = SubResource("LabelSettings_dqlnf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeathScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("18_xmmct")

[node name="DeathMessage" type="Control" parent="DeathScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="DeathScreen/DeathMessage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("19_l3dc3")
expand_mode = 2

[node name="Label" type="Label" parent="DeathScreen/DeathMessage"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -35.0
offset_right = 113.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
text = "YOU DIED"
label_settings = SubResource("LabelSettings_y5bbt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fade" type="TextureRect" parent="DeathScreen"]
self_modulate = Color(0, 0, 0, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_w4pfp")
